@@ -351,6 +351,8 @@ Version ${Version} (${Date})
    automatically added to the toolbar.
  - You can now toggle AVIM by pressing Ctrl twice in a row, just like in AVIM
    for Chrome. AVIM plays a faint sound to alert you that it has been toggled.
+   To adjust the volume, go to AVIM's entry in about:addons and click
+   Preferences.
  - Firefox Sync can now keep AVIM preferences synchronized across different
    installations of Firefox and Firefox Mobile.
  - Fixed an issue in rich text controls where selecting text and pressing
